- fixed a bug about foot-nav overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ a.button:visited{
 }
 .desktop.large{
   visibility: hidden;
+  overflow: hidden;
 }
 
 .color-white{
